--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
      <meta http-equiv="refresh" content="0; URL=https://www.even3.com.br/manguebit-2024-438948/" />
    </head>
    <body>
-     <p>If you are not redirected within 3 seconds, click <a href="https://www.even3.com.br/manguebit2022?even3_orig=events_eventlist">here</a> to go to the MangueBit Tickets Page.</p>
+     <p>If you are not redirected within 3 seconds, click <a href="https://www.even3.com.br/manguebit-2024-438948">here</a> to go to the MangueBit Tickets Page.</p>
    </body>
 </html>
